Server/esp_server/build/log/idf_py_stderr_output_36355
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'init_sd_card':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:114:5: error: 'slot_config' undeclared (first use in this function)
  114 |     slot_config.clk = GPIO_NUM_14;
      |     ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:114:5: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:91:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   91 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
